--- a/index.html
+++ b/index.html
@@ -1,21 +1,168 @@
 
 <!doctype html>
 <html class="fixed">
-<head>
-    <meta charset="UTF-8">
-    <title></title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/style.css">
+	<head>
+	    <meta charset="UTF-8">
+	    <title></title>
+	    <link rel="stylesheet" href="css/bootstrap.min.css">
+	    <link rel="stylesheet" href="css/style.css">
+	    <link rel="stylesheet" href="css/cm.css">
 
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-</head>
-<body>
-    <header>
+	    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+	    <script src="js/bm.js"></script>
+	    <script src="js/core.js"></script>
+	    <script src="js/cm.js"></script>
 
-        
-    </header>
+	    <style type="text/css">
+	    	header{
+	    		margin-left: 50px;
+	    		margin-right: 50px;
+	    	}
+	    	main{
+	    		margin-left: 50px;
+	    		margin-right: 50px;
+	    	}
+	    </style>
+	</head>
 
-</body>
+	<body>
+		<div class = "wrapper">
+		    <header>
+		    	<nav role = "navigate">
+		    		<div class = "nav-left">
+		    			<img src = "img/menu.png" alt = "">
+		    		</div>
+
+		    		<div class = "nav-logo">
+		    			<img src = "img/logo.png" alt = "logo">
+		    		</div>
+
+		    		<div class = "nav-right">
+		    			<img src = "img/notification.png" alt = "">
+		    		</div>
+		    	</nav>
+		        
+		    </header>
+
+		    <br>
+		    <main class = "content">
+		    	<section class = "statistic">
+		    		<br>
+		    		<h3>Потребление электричества</h3>
+		    		<div class="ct-chart ct-perfect-fourth"></div>
+
+		    		<div class = "price_information">
+		    			<div class = "day">
+		    				<h2> 5.94</h2>
+		    				<p> день <br>
+		    					кВтч <br>
+		    				рублей </p>
+		    			</div>
+
+		    			<div class = "night">
+		    				<h2> 3.84</h2>
+		    				<p> ночь <br>
+		    					кВтч <br>
+		    				рублей </p>
+		    			</div>
+		    		</div>
+
+		    		<div class = "new_cart">
+		    			<div class = "new">
+			    			<h4>Замените лампочки<br>
+			    				накаливания на светодиодные</h4>
+
+			    			<div class = "filters">
+			    				<p>Советы</p>"&nbsp;"
+			    				<p>Экономика</p>
+			    			</div>
+			    		</div>
+		    		</div>
+		    		<div class = "new_cart">
+		    			<div class = "new">
+			    			<h4>Не перегружайте стиральную<br>
+			    				машину</h4>
+
+			    			<div class = "filters">
+			    				<p>Советы</p>"&nbsp;"
+			    				<p>Экономика</p>
+			    			</div>
+			    		</div>
+		    		</div>
+		    		<div class = "new_cart">
+		    			<div class = "new">
+			    			<h4>График плановых работ энергетиков<br>
+			    				на 30 апреля</h4>
+
+			    			<div class = "filters">
+			    				<p>Новости</p>"&nbsp;"
+			    				<p>Отключения</p>
+			    			</div>
+			    		</div>
+		    		</div>
+		    		<br>
+		    		<br>
+		    	</section>
+		    <br>
+		    <br>
+		    <div class = "found">
+				<div class="card">
+					<div class="card-body">
+						<h5 class="card-title">Сборы на установку видеокамер</h5>
+						<br>
+						<div class="progress">
+						  <div class="progress-bar progress-bar-striped bg-warning" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">2536р</div>
+						 </div>
+						<br>
+						<div class = "enter">
+							<input type="submit" value ="Принять участие">
+						</div>
+					</div>
+				</div>
+			</div>
+		    </main>
+
+	    	<footer class = "footer">
+	    		<div class = "footer-menu">
+	    			<div class = "footer-card">
+	    				<img src = "img/pays.png" alt = "pays" class = "pays">
+	    				<span>Платежи</span>
+	    			</div>
+
+	    			<div class = "footer-card">
+	    				<img src = "img/home.png" alt = "home" class = "home">
+	    				<span>Дом</span>
+	    			</div>
+
+	    			<div class = "footer-card">
+	    				<img src = "img/call.png" alt = "call" class = "call">
+	    				<span>Вызов</span>
+	    			</div>
+	    		</div>
+	    	</footer>
+		</div>
+
+		<script>
+			new Chartist.Line('.ct-chart', {
+			  labels: [1, 2, 3, 4, 5, 6, 7, 8],
+			  series: [
+			    [5, 8, 7, 8, 5, 3, 5, 4]
+			  ]
+			}, {
+			  low: 0,
+			  showArea: true
+			});
+		</script>
+
+	    <script type="text/javascript">
+
+			$('body').css({
+
+				height: $(window).height()
+
+			});
+
+	</script>
+	</body>
 </html>
