--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 	    <script src="js/bm.js"></script>
 	    <script src="js/core.js"></script>
 	    <script src="js/cm.js"></script>
-
+	    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+	    
 	    <style type="text/css">
 	    	header{
 	    		margin-left: 50px;
@@ -31,7 +32,7 @@
 		    <header>
 		    	<nav role = "navigate">
 		    		<div class = "nav-left">
-		    			<img src = "img/menu.png" alt = "">
+		    			<i class="material-icons">menu</i>
 		    		</div>
 
 		    		<div class = "nav-logo">
@@ -39,7 +40,7 @@
 		    		</div>
 
 		    		<div class = "nav-right">
-		    			<img src = "img/notification.png" alt = "">
+		    			 <i class="material-icons">notifications</i>
 		    		</div>
 		    	</nav>
 
