--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
 	    <script src="js/core.js"></script>
 	    <script src="js/cm.js"></script>
 	    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-	    
 	    <style type="text/css">
 	    	header{
 	    		margin-left: 50px;
@@ -40,7 +39,7 @@
 		    		</div>
 
 		    		<div class = "nav-right">
-		    			 <i class="material-icons">notifications</i>
+		    			 <img src = "img/notification.png">
 		    		</div>
 		    	</nav>
 
