--- a/index.html
+++ b/index.html
@@ -52,17 +52,17 @@
 		    		<h3>Потребление электричества</h3>
 		    		<div class="ct-chart ct-perfect-fourth"></div>
 
-		    		<div class = "price_information">
+		    		<div class = "price_information" >
 		    			<div class = "day">
-		    				<h2> 5.94</h2>
-		    				<p> день <br>
+		    				<h2> 5,94</h2>
+		    				<p style="line-height: 1.0; padding-top: 13px "> день <br>
 		    					кВтч <br>
 		    				рублей </p>
 		    			</div>
 
 		    			<div class = "night">
-		    				<h2> 3.84</h2>
-		    				<p> ночь <br>
+		    				<h2> 3,84</h2>
+		    				<p style="line-height: 1.0; padding-top: 13px "> ночь <br>
 		    					кВтч <br>
 		    				рублей </p>
 		    			</div>
@@ -104,8 +104,7 @@
 		    		<br>
 		    		<br>
 		    	</section>
-		    <br>
-		    <br>
+
 		    <div class = "found">
 				<div class="card">
 					<div class="card-body">
