--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 	    <link rel="stylesheet" href="css/style.css">
 	    <link rel="stylesheet" href="css/cm.css">
 
-	    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+	    <script src="js/jquery.js"></script>
+	    <script src="js/popper.js"></script>
 	    <script src="js/bm.js"></script>
 	    <script src="js/core.js"></script>
 	    <script src="js/cm.js"></script>
@@ -31,7 +31,7 @@
 		    <header>
 		    	<nav role = "navigate">
 		    		<div class = "nav-left">
-		    			<i class="material-icons">menu</i>
+		    			<img src = "img/menu.png">
 		    		</div>
 
 		    		<div class = "nav-logo">
@@ -74,7 +74,7 @@
 			    				накаливания на светодиодные</h4>
 
 			    			<div class = "filters">
-			    				<p>Советы</p>"&nbsp;"
+			    				<p>Советы</p>&nbsp;
 			    				<p>Экономика</p>
 			    			</div>
 			    		</div>
@@ -85,7 +85,7 @@
 			    				машину</h4>
 
 			    			<div class = "filters">
-			    				<p>Советы</p>"&nbsp;"
+			    				<p>Советы</p>&nbsp;
 			    				<p>Экономика</p>
 			    			</div>
 			    		</div>
@@ -96,7 +96,7 @@
 			    				на 30 апреля</h4>
 
 			    			<div class = "filters">
-			    				<p>Новости</p>"&nbsp;"
+			    				<p>Новости</p>&nbsp;
 			    				<p>Отключения</p>
 			    			</div>
 			    		</div>
