--- a/login.html
+++ b/login.html
@@ -7,11 +7,15 @@
 	    <title></title>
 	    <link rel="stylesheet" href="css/bootstrap.min.css">
 	    <link rel="stylesheet" href="css/style.css">
+	    <link rel="stylesheet" href="css/cm.css">
 
-	    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+	    <script src="js/jquery.js"></script>
+	    <script src="js/popper.js"></script>
 	    <script src="js/bm.js"></script>
 	    <script src="js/core.js"></script>
+	    <script src="js/cm.js"></script>
+
+	    <style type="text/css">
 
 
 	    <script type="text/javascript">
