--- a/login.html
+++ b/login.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html class="fixed">
 	<head>
@@ -15,7 +14,7 @@
 	    <script src="js/core.js"></script>
 	    <script src="js/cm.js"></script>
 
-	    <style type="text/css">
+	    <style type="text/css"></style>
 
 
 	    <script type="text/javascript">
