--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 
-<!doctype html>
+<!DOCTYPE HTML>
 <html class="fixed">
 	<head>
 	    <meta charset="UTF-8">
@@ -11,7 +11,11 @@
 	    <script src="js/jquery.js"></script>
 	    <script src="js/popper.js"></script>
 	    <script src="js/bm.js"></script>
-	    <script src="js/core.js"></script>
+	    <script>
+
+			document.write('<meta name="viewport" content="">');
+
+		</script>
 	    <script src="js/cm.js"></script>
 
 	    <style type="text/css">
@@ -143,6 +147,7 @@
 		</div>
 
 		<script>
+
 
 			data = [];
 			data['series'] = [];
