--- a/pays.html
+++ b/pays.html
@@ -48,27 +48,13 @@
 		    </header>
 		    <br>
 		    <main div class = "content">
-	    		<div class="boxes">
-					<br>
-					<div class = "notification">
-						<br>
-						<h3>В вашем районе планируется отключение электроэнергии.</h3>
-						<br>
+		    	
+		    		<div class="boxes">
+		    			<div style="margin-left: 50px; margin-right: 50px">
+							<h1>4883 <font style="font-size: 1.5rem">рублей к оплате за прошедший месяц</font></h1>
+						</div>
 					</div>
-					<br>
-					<div class = "notification">
-						<br>
-						<h3> Оплатите электроэнергию за апрель месяц. С днем рождения!</h3>
-						<br>
-					</div>
-					<br>
-					<div class = "notification">
-						<br>
-						<h3>Примите участие в общедомовых сборах на установку видеокамер.</h3>
-						<br>
-					</div>
-					<br>
-				</div>
+				
 		    </main>
 
 
