--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
 		    <br>
 		    <main class = "content">
-		    	<section class = "statistic">
+		    	<section class = "boxes">
 		    		<br>
 		    		<h3>Потребление электричества</h3>
 		    		<div class="ct-chart ct-perfect-fourth"></div>
@@ -110,8 +110,8 @@
 		    		<br>
 		    		<br>
 		    	</section>
-
-			    <section class = "found">
+		    	<br>
+			    <section class = "boxes">
 					<br>
 					<br>
 					<br>
@@ -331,3 +331,50 @@
 	    </div>
 	</div>
 </calls>
+
+<pays>
+	<div class="boxes">
+		<div style="margin-left: 50px; margin-right: 50px">
+			<h1 style="color:#F76B1C">4883 <font style="font-size: 1.5rem">рублей к оплате за прошедший месяц</font></h1>
+			<div class = "message">
+				<div class = "service_price">
+					<p> Услуги коньержа </p>
+					<bold> 200 </bold>
+				</div>
+				<div class = "service_price">
+					<p> Услуги коньержа </p>
+					<bold> 200 </bold>
+				</div>
+				<div class = "service_price">
+					<p> Услуги коньержа </p>
+					<bold> 200 </bold>
+				</div>
+				<div class = "service_price">
+					<p> Услуги коньержа </p>
+					<bold> 200 </bold>
+				</div>
+				<div class = "service_price">
+					<p> Услуги коньержа </p>
+					<bold> 200 </bold>
+				</div>
+				<div class = "service_price">
+					<p> Услуги коньержа </p>
+					<bold> 200 </bold>
+				</div>
+				<div class = "service_price">
+					<p> Услуги коньержа </p>
+					<bold> 200 </bold>
+				</div>
+			</div>
+			<br>
+			<div style="text-align: center;">
+				<input id="ex6" type="text" data-slider-min="0" data-slider-max="12" data-slider-id="RC" data-slider-step="1" data-slider-value="0" style="width: 100%;" /><br>
+				<span id="ex6CurrentSliderValLabel">Месяцев за перед: <span id="ex6SliderVal">0</span></span>
+			</div>
+		</div>
+		<br>
+
+		<div class = "btn"><button class = "pay_btn"> Оплатить </button></div>
+		<br>
+	</div>
+</pays>
