--- a/new.html
+++ b/new.html
@@ -48,7 +48,7 @@
 		    </header>
 		    <br>
 		    <main div class = "content">
-		    	<div class = "new_card">
+		    	<div class = "boxes">
 		    		<div class = "new_title">
 		    			<h2> График плановых работ <br>энергетиков на 30 апреля </h2>
 		    		</div>
@@ -84,7 +84,7 @@
 
 						В графике возможны изменения.
 						</p>
-
+						<br>
 		    		</div>
 		    	</div>
 		    </main>
