--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 		    </header>
 
 		    <br>
-		    <main class = "content">
+		    <main class = "maincontent">
 		    	<section class = "boxes">
 		    		<br>
 		    		<h3>Потребление электричества</h3>
@@ -73,40 +73,6 @@
 		    				рублей </p>
 		    			</div>
 		    		</div>
-
-		    		<div class = "new_cart">
-		    			<div class = "new">
-			    			<h4>Замените лампочки<br>
-			    				накаливания на светодиодные</h4>
-
-			    			<div class = "filters">
-			    				<p>Советы</p>&nbsp;
-			    				<p>Экономика</p>
-			    			</div>
-			    		</div>
-		    		</div>
-		    		<div class = "new_cart">
-		    			<div class = "new">
-			    			<h4>Не перегружайте стиральную<br>
-			    				машину</h4>
-
-			    			<div class = "filters">
-			    				<p>Советы</p>&nbsp;
-			    				<p>Экономика</p>
-			    			</div>
-			    		</div>
-		    		</div>
-		    		<div class = "new_cart">
-		    			<div class = "new">
-			    			<h4>График плановых работ энергетиков<br>
-			    				на 30 апреля</h4>
-
-			    			<div class = "filters">
-			    				<p>Новости</p>&nbsp;
-			    				<p>Отключения</p>
-			    			</div>
-			    		</div>
-		    		</div>
 		    		<br>
 		    		<br>
 		    	</section>
@@ -119,16 +85,218 @@
 					<br>
 					<div class = "container">
 						<div class="progress">
-							<div class="progress-bar progress-bar-striped bg-warning" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">2536р</div>
+							<div class="progress-bar progress-bar-striped bg-warning" role="progressbar" style="width: 0%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">2536р</div>
 						</div>
 					</div>
 					<br>
 					<div class = "enter">
 						<input type="submit" value ="Принять участие">
 					</div>
+					<br>
 
 				</section>
 		    </main>
+
+			<div class="news" style="display: none">
+				<main div class = "content">
+			    	<div class = "new_card">
+			    		<div class = "new_title">
+			    			<h2> График плановых работ <br>энергетиков на 30 апреля </h2>
+			    		</div>
+			    		<br>
+			    		<div class = "new_body">
+			    			<p>Для обеспечения потребителей Республики Саха (Якутия) качественной и бесперебойной электроэнергией, специалисты Центральных и Западных электрических сетей ежедневно ведут работы по подключению новых абонентов к электрическим сетям и последовательные ремонтные работы на объектах электросетевого хозяйства, которые невозможны без введений плановых временных ограничений электроснабжения.
+
+							Для удобства наших потребителей основная часть ремонтных работ проводится в дневное время рабочих будней, когда существенно снижено потребление электроэнергии. Временные ограничения электроснабжения 28 ноября в г. Якутске и ряде районов будут проводиться по следующему графику:
+
+							г. Якутск:
+
+							09:00-12:00 – Покровский тракт 10 км – работы по технологическому присоединению потребителей;
+
+							09:00-12:00 – Якова Потапова 27/1, Лермонтова 26 – работы в охранной зоне энергообъектов;
+
+							09:00-12:00 – Билибина 42/4 – пасынковка опоры;
+
+							09:00-17:00 –             1-я Пристанская, 2-я Пристанская (частично), 50 лет Советской Армии 86/3-106 – капитальный ремонт ВЛ;
+
+							09:00-17:00 – Стерхмкр-н, Сергеляхское поле (частично), Набережная 89, Ушакова 6 – работы по заявкам Якутского отделения Энергосбыта;
+
+							14:00-17:00 – Лермонтова 26, Малая Марха (частично) – работы в охранной зоне энергообъектов.
+
+							Мирнинский район:
+
+							10:00-12:00 – г. Мирный (Вилюйская, Иреляхская, Транспортная, Экспедиционная, Мухтуйская, Таежная, Ленская, Нагорная, Набережная, Лесная, Интернациональная, Звездная, Целинная, Фабричная, теплопункт-Нижняя школа, СОШ №8, теплопункт МУП «Коммунальщик») – испытание кабельной линии;
+
+							14:00-17:00 – г. Мирный (1-й Пионерский пер., Первомайская, Фрунзе, Индустриальная) – установка шкафа управления на КТП.
+
+							Усть-Алданский район:
+
+							14:00-17:00 – с. Сырдах, с. Арылах, с. Бейдингэ, с. Окоемовка, с. Сасылыкан, с. Тумул, с. Ары-Тит, с. Соттинцы, с. Хоногор. – перевод питания.
+
+							В графике возможны изменения.
+							</p>
+
+			    		</div>
+			    	</div>
+			    </main>
+			</div>
+
+			<div class="notifications" style="display: none">
+				<div class="boxes">
+					<br>
+					<div class = "notification">
+						<br>
+						<h3>В вашем районе планируется отключение электроэнергии.</h3>
+						<br>
+					</div>
+					<br>
+					<div class = "notification">
+						<br>
+						<h3> Оплатите электроэнергию за апрель месяц. С днем рождения!</h3>
+						<br>
+					</div>
+					<br>
+					<div class = "notification">
+						<br>
+						<h3>Примите участие в общедомовых сборах на установку видеокамер.</h3>
+						<br>
+					</div>
+					<br>
+				</div>
+			</div>
+
+			<main>
+				<div class = "calls" style="display: none">
+					<div class = "row">
+						<div class = "col-md-6" style="text-align:center">
+				    		<div class = "boxes">
+				    			<br>
+								<img src = "img/plug.png">
+								<br>
+								<br>
+				    			<h3> Электрик </h3>
+				    			<br>
+				    		</div>
+				    		<br>
+				    		<div class = "boxes">
+				    			<br>
+				    			<img src = "img/elevator.png">
+								<br>
+								<br>
+				    			<h3> Лифтер </h3>
+				    			<br>
+				    		</div>
+					    </div>
+					    <div class = "col-md-6" style="text-align:center">
+				    		<div class = "boxes">
+				    			<br>
+				    			<img src = "img/tap.png">
+								<br>
+								<br>
+				    			<h3> Сантехник </h3>
+				    			<br>
+				    		</div>
+				    		<br>
+				    		<div class = "boxes">
+				    			<br>
+				    			<img src = "img/garbage.png">
+								<br>
+								<br>
+				    			<h3> Мусорщик </h3>
+				    			<br>
+				    		</div>
+					    </div>
+					</div>
+					<br>
+					<div class = "row">
+						<div class = "col-md-6" style="text-align:center">
+				    		<div class = "boxes">
+				    			<br>
+				    			<img src = "img/drop.png">
+								<br>
+								<br>
+				    			<h3> Водовозка </h3>
+				    			<br>
+				    		</div>
+				    		<br>
+				    		<div class = "boxes">
+				    			<br>
+				    			<img src = "img/cleaning.png">
+								<br>
+								<br>
+				    			<h3> Уборщица </h3>
+				    			<br>
+				    		</div>
+					    </div>
+					    <div class = "col-md-6" style="text-align:center">
+					    	<div class = "boxes">
+				    			<br>
+				    			<img src = "img/poo.png">
+								<br>
+								<br>
+				    			<h3> Фекалка </h3>
+				    			<br>
+				    		</div>
+				    		<br>
+				    		<div class = "boxes">
+				    			<br>
+				    			<img src = "img/speech-bubble.png">
+								<br>
+								<br>
+				    			<h3> Чат помощь </h3>
+				    			<br>
+				    		</div>
+					    </div>
+					</div>
+				</div>
+
+				<div class="pay" style="display: none">
+					<div class="boxes">
+						<div style="margin-left: 50px; margin-right: 50px">
+							<h1 style="color:#F76B1C">4883 <font style="font-size: 1.5rem">рублей к оплате за прошедший месяц</font></h1>
+							<div class = "message">
+								<div class = "service_price">
+									<p> Услуги коньержа </p>
+									<bold> 200 </bold>
+								</div>
+								<div class = "service_price">
+									<p> Услуги коньержа </p>
+									<bold> 200 </bold>
+								</div>
+								<div class = "service_price">
+									<p> Услуги коньержа </p>
+									<bold> 200 </bold>
+								</div>
+								<div class = "service_price">
+									<p> Услуги коньержа </p>
+									<bold> 200 </bold>
+								</div>
+								<div class = "service_price">
+									<p> Услуги коньержа </p>
+									<bold> 200 </bold>
+								</div>
+								<div class = "service_price">
+									<p> Услуги коньержа </p>
+									<bold> 200 </bold>
+								</div>
+								<div class = "service_price">
+									<p> Услуги коньержа </p>
+									<bold> 200 </bold>
+								</div>
+							</div>
+							<br>
+							<div style="text-align: center;">
+								<input id="ex6" type="text" data-slider-min="0" data-slider-max="12" data-slider-id="RC" data-slider-step="1" data-slider-value="0" style="width: 100%;" /><br>
+								<span id="ex6CurrentSliderValLabel">Месяцев за перед: <span id="ex6SliderVal">0</span></span>
+							</div>
+						</div>
+						<br>
+
+						<div class = "btn"><button class = "pay_btn"> Оплатить </button></div>
+						<br>
+					</div>
+				</div>
+			</main>
 
 	    	<footer class = "footer">
 	    		<div class = "footer-menu">
@@ -152,6 +320,70 @@
 
 		<script>
 
+
+
+
+			goHome = function(){
+
+				$('.news').css({'display' : 'none'});
+				$('.notifications').css({'display' : 'none'});
+				$('.calls').css({'display' : 'none'});
+				$('.pay').css({'display' : 'none'});
+				$('.maincontent').css({'display' : 'block'});
+
+			};
+			goPays = function(){
+
+				$('.news').css({'display' : 'none'});
+				$('.notifications').css({'display' : 'none'});
+				$('.calls').css({'display' : 'none'});
+				$('.pay').css({'display' : 'block'});
+				$('.maincontent').css({'display' : 'none'});
+
+			};
+			goCalls = function(){
+
+				$('.news').css({'display' : 'none'});
+				$('.notifications').css({'display' : 'none'});
+				$('.calls').css({'display' : 'block'});
+				$('.pay').css({'display' : 'none'});
+				$('.maincontent').css({'display' : 'none'});
+
+			};
+			goNotif = function(){
+
+				$('.news').css({'display' : 'none'});
+				$('.notifications').css({'display' : 'block'});
+				$('.calls').css({'display' : 'none'});
+				$('.pay').css({'display' : 'none'});
+				$('.maincontent').css({'display' : 'none'});
+
+			};
+
+			$('.nav-logo').on('click',function(){
+
+				goHome();
+
+			})
+			$('.home').on('click',function(){
+
+				goHome();
+
+			})
+			$('.call').on('click',function(){
+
+				goCalls();
+
+			})
+			$('.pays').on('click',function(){
+
+				goPays();
+
+			})
+
+
+
+			//RENDER BEGIN
 
 			data = [];
 			data['series'] = [];
@@ -182,6 +414,49 @@
 			  low: 0,
 			  showArea: true
 			});
+
+			data['news'] = JSON.parse(localStorage.news);
+
+			for(var i=0; i<3; i++){
+
+				cats = '';
+
+
+
+				console.log(data['news'][i]['cat']);
+				data['news'][i]['cat'] = JSON.parse(data['news'][i]['cat']);
+
+				for(var j=0; j<data['news'][i]['cat'].length; j++){
+
+					cats += '<p>' + data['news'][i]['cat'][j] + '</p>';
+
+				}
+
+				toHtml = '<div class = "new_cart" data-id="'+i+'"><div class = "new"><h4>'+data['news'][i]['title']+'</h4><div class = "filters">'+cats+'</div></div></div>';
+				$('.price_information').after(toHtml);
+
+			}
+
+			$('.new_cart').on('click', function(){
+
+				$('.maincontent').css({'display' : 'none'});
+				$('.news').css({'display' : 'block'});
+				$('.new_title').html($('<h2></h2>').html(data['news'][$(this).attr('data-id')]['title']));
+				$('.new_body').html($('<p></p>').html(data['news'][$(this).attr('data-id')]['content']));
+				$('.new_title').css({'background-image' : 'url('+data['news'][$(this).attr('data-id')]['picture']+')'});
+
+			});
+
+			data['crfund'] = JSON.parse(localStorage.crfund);
+
+			$('.card-title').html(data['crfund']['title']+'</br>'+data['crfund']['needMoney']+'Р');
+			$('.progress-bar').html(data['crfund']['money']);
+			$('.progress-bar').css({'width' : 100*(data['crfund']['money']/data['crfund']['needMoney']) + '%'})
+
+
+
+			//RENDER END
+
 		</script>
 
 	    <script type="text/javascript">
@@ -195,186 +470,6 @@
 		</script>
 	</body>
 </html>
+<!--
 
-<news>
-	<main div class = "content">
-    	<div class = "new_card">
-    		<div class = "new_title">
-    			<h2> График плановых работ <br>энергетиков на 30 апреля </h2>
-    		</div>
-    		<br>
-    		<div class = "new_body">
-    			<p>Для обеспечения потребителей Республики Саха (Якутия) качественной и бесперебойной электроэнергией, специалисты Центральных и Западных электрических сетей ежедневно ведут работы по подключению новых абонентов к электрическим сетям и последовательные ремонтные работы на объектах электросетевого хозяйства, которые невозможны без введений плановых временных ограничений электроснабжения.
-
-				Для удобства наших потребителей основная часть ремонтных работ проводится в дневное время рабочих будней, когда существенно снижено потребление электроэнергии. Временные ограничения электроснабжения 28 ноября в г. Якутске и ряде районов будут проводиться по следующему графику:
-
-				г. Якутск:
-
-				09:00-12:00 – Покровский тракт 10 км – работы по технологическому присоединению потребителей;
-
-				09:00-12:00 – Якова Потапова 27/1, Лермонтова 26 – работы в охранной зоне энергообъектов;
-
-				09:00-12:00 – Билибина 42/4 – пасынковка опоры;
-
-				09:00-17:00 –             1-я Пристанская, 2-я Пристанская (частично), 50 лет Советской Армии 86/3-106 – капитальный ремонт ВЛ;
-
-				09:00-17:00 – Стерхмкр-н, Сергеляхское поле (частично), Набережная 89, Ушакова 6 – работы по заявкам Якутского отделения Энергосбыта;
-
-				14:00-17:00 – Лермонтова 26, Малая Марха (частично) – работы в охранной зоне энергообъектов.
-
-				Мирнинский район:
-
-				10:00-12:00 – г. Мирный (Вилюйская, Иреляхская, Транспортная, Экспедиционная, Мухтуйская, Таежная, Ленская, Нагорная, Набережная, Лесная, Интернациональная, Звездная, Целинная, Фабричная, теплопункт-Нижняя школа, СОШ №8, теплопункт МУП «Коммунальщик») – испытание кабельной линии;
-
-				14:00-17:00 – г. Мирный (1-й Пионерский пер., Первомайская, Фрунзе, Индустриальная) – установка шкафа управления на КТП.
-
-				Усть-Алданский район:
-
-				14:00-17:00 – с. Сырдах, с. Арылах, с. Бейдингэ, с. Окоемовка, с. Сасылыкан, с. Тумул, с. Ары-Тит, с. Соттинцы, с. Хоногор. – перевод питания.
-
-				В графике возможны изменения.
-				</p>
-
-    		</div>
-    	</div>
-    </main>
-</news>
-
-<notifications>
-	<div class="boxes">
-		<br>
-		<div class = "notification">
-			<br>
-			<h3>В вашем районе планируется отключение электроэнергии.</h3>
-			<br>
-		</div>
-		<br>
-		<div class = "notification">
-			<br>
-			<h3> Оплатите электроэнергию за апрель месяц. С днем рождения!</h3>
-			<br>
-		</div>
-		<br>
-		<div class = "notification">
-			<br>
-			<h3>Примите участие в общедомовых сборах на установку видеокамер.</h3>
-			<br>
-		</div>
-		<br>
-	</div>
-</notifications>
-
-<calls>
-	<div class = "row">
-		<div class = "col-md-6">
-    		<div class = "boxes">
-    			<br>
-    			<img src = "img/plug.png">
-    			<h3> Электрик </h3>
-    			<br>
-    		</div>
-    		<br>
-    		<div class = "boxes">
-    			<br>
-    			<img src = "img/elevator.png">
-    			<h3> Лифтер </h3>
-    			<br>
-    		</div>
-	    </div>
-	    <div class = "col-md-6">
-    		<div class = "boxes">
-    			<br>
-    			<img src = "img/tap.png">
-    			<h3> Сантехник </h3>
-    			<br>
-    		</div>
-    		<br>
-    		<div class = "boxes">
-    			<br>
-    			<img src = "img/garbage.png">
-    			<h3> Мусорщик </h3>
-    			<br>
-    		</div>
-	    </div>
-	</div>
-	<br>
-	<div class = "row">
-		<div class = "col-md-6">
-    		<div class = "boxes">
-    			<br>
-    			<img src = "img/drop.png">
-    			<h3> Водовозка </h3>
-    			<br>
-    		</div>
-    		<br>
-    		<div class = "boxes">
-    			<br>
-    			<img src = "img/cleaning.png">
-    			<h3> Уборщица </h3>
-    			<br>
-    		</div>
-	    </div>
-	    <div class = "col-md-6">
-	    	<div class = "boxes">
-    			<br>
-    			<img src = "img/poo.png">
-    			<h3> Фекалка </h3>
-    			<br>
-    		</div>
-    		<br>
-    		<div class = "boxes">
-    			<br>
-    			<img src = "img/speech-bubble.png">
-    			<h3> Чат помощь </h3>
-    			<br>
-    		</div>
-	    </div>
-	</div>
-</calls>
-
-<pays>
-	<div class="boxes">
-		<div style="margin-left: 50px; margin-right: 50px">
-			<h1 style="color:#F76B1C">4883 <font style="font-size: 1.5rem">рублей к оплате за прошедший месяц</font></h1>
-			<div class = "message">
-				<div class = "service_price">
-					<p> Услуги коньержа </p>
-					<bold> 200 </bold>
-				</div>
-				<div class = "service_price">
-					<p> Услуги коньержа </p>
-					<bold> 200 </bold>
-				</div>
-				<div class = "service_price">
-					<p> Услуги коньержа </p>
-					<bold> 200 </bold>
-				</div>
-				<div class = "service_price">
-					<p> Услуги коньержа </p>
-					<bold> 200 </bold>
-				</div>
-				<div class = "service_price">
-					<p> Услуги коньержа </p>
-					<bold> 200 </bold>
-				</div>
-				<div class = "service_price">
-					<p> Услуги коньержа </p>
-					<bold> 200 </bold>
-				</div>
-				<div class = "service_price">
-					<p> Услуги коньержа </p>
-					<bold> 200 </bold>
-				</div>
-			</div>
-			<br>
-			<div style="text-align: center;">
-				<input id="ex6" type="text" data-slider-min="0" data-slider-max="12" data-slider-id="RC" data-slider-step="1" data-slider-value="0" style="width: 100%;" /><br>
-				<span id="ex6CurrentSliderValLabel">Месяцев за перед: <span id="ex6SliderVal">0</span></span>
-			</div>
-		</div>
-		<br>
-
-		<div class = "btn"><button class = "pay_btn"> Оплатить </button></div>
-		<br>
-	</div>
-</pays>
+-->
