--- a/pays.html
+++ b/pays.html
@@ -51,51 +51,80 @@
 		    <br>
 		    <main div class = "content">
 		    	
-		    		<div class="boxes">
-		    			<div style="margin-left: 50px; margin-right: 50px">
-							<h1 style="color:#F76B1C">4883 <font style="font-size: 1.5rem">рублей к оплате за прошедший месяц</font></h1>
-							<div class = "message">
-								<div class = "service_price">
-									<p> Услуги коньержа </p>
-									<bold> 200 </bold>
-								</div>
-								<div class = "service_price">
-									<p> Услуги коньержа </p>
-									<bold> 200 </bold>
-								</div>
-								<div class = "service_price">
-									<p> Услуги коньержа </p>
-									<bold> 200 </bold>
-								</div>
-								<div class = "service_price">
-									<p> Услуги коньержа </p>
-									<bold> 200 </bold>
-								</div>
-								<div class = "service_price">
-									<p> Услуги коньержа </p>
-									<bold> 200 </bold>
-								</div>
-								<div class = "service_price">
-									<p> Услуги коньержа </p>
-									<bold> 200 </bold>
-								</div>
-								<div class = "service_price">
-									<p> Услуги коньержа </p>
-									<bold> 200 </bold>
-								</div>
+	    		<div class="boxes">
+	    			<br>
+	    			<div style="margin-left: 50px; margin-right: 50px">
+						<h1 style="color:#F76B1C">4883 <font style="font-size: 1.5rem">рублей к оплате за прошедший месяц</font></h1>
+						<div class = "message">
+							<div class = "service_price">
+								<p> Услуги коньержа </p>
+								<bold> 200 </bold>
 							</div>
-							<br>
-							<div style="text-align: center;">
-								<input id="ex6" type="text" data-slider-min="0" data-slider-max="12" data-slider-id="RC" data-slider-step="1" data-slider-value="0" style="width: 100%;" /><br>
-								<span id="ex6CurrentSliderValLabel">Месяцев за перед: <span id="ex6SliderVal">0</span></span>
+							<div class = "service_price">
+								<p> Услуги коньержа </p>
+								<bold> 200 </bold>
+							</div>
+							<div class = "service_price">
+								<p> Услуги коньержа </p>
+								<bold> 200 </bold>
+							</div>
+							<div class = "service_price">
+								<p> Услуги коньержа </p>
+								<bold> 200 </bold>
+							</div>
+							<div class = "service_price">
+								<p> Услуги коньержа </p>
+								<bold> 200 </bold>
+							</div>
+							<div class = "service_price">
+								<p> Услуги коньержа </p>
+								<bold> 200 </bold>
+							</div>
+							<div class = "service_price">
+								<p> Услуги коньержа </p>
+								<bold> 200 </bold>
 							</div>
 						</div>
 						<br>
-
-						<div class = "btn"><button class = "pay_btn"> Оплатить </button></div>
-						<br>
+						<div style="text-align: center;">
+							<input id="ex6" type="text" data-slider-min="0" data-slider-max="12" data-slider-id="RC" data-slider-step="1" data-slider-value="0" style="width: 100%;" /><br>
+							<span id="ex6CurrentSliderValLabel">Месяцев за перед: <span id="ex6SliderVal">0</span></span>
+						</div>
 					</div>
-				
+					<br>
+
+					<div class = "btn"><button class = "pay_btn"> Оплатить </button></div>
+					<br>
+				</div>
+
+				<br>
+				<br>
+				<br>
+				<div class = "boxes" style="text-align: center">
+					<br>
+					<h3 style="font-size: 2rem;"> Ваша общая задолженность </h3>
+					<br>
+					<br>
+
+					<h1 style="font-size: 6rem; line-height: 0.4; color: rgb(247,107,28);">7432
+						<font style="font-size: 1.5rem;"> <br>рублей</font></h1>
+					<br>
+					<br>
+					<div class = "btn"><button class = "pay_btn" style="height: 45px; font-size: 1.5rem"> Подать заявку на рассрочку </button></div>
+					<br>
+					<br>
+
+				</div>
+				<br>
+				<br>
+
+				<div class = "boxes" style="text-align: center">
+					<br>
+					<button style="font-size: 3rem; border: none; color: rgb(247,107,28); background: white;"> Сканировать счетчкики </button>
+					<br>
+					<br>
+					<br>
+				</div>
 		    </main>
 
 
