--- a/calls.html
+++ b/calls.html
@@ -49,8 +49,28 @@
 		    	</nav>
 
 		    </header>
+
+
+
 		    <br>
 		    <main div class = "content">
+		    	<section class="profile">
+		    		<div class = "boxes">
+		    			<br>
+		    			<div class = "icon">
+		    				<img src = "img/avatar.png"> 
+		    			</div>
+		    			<br>
+	    				<div class="progress" style="height: 20px; width: 90%; margin: 0 auto;">
+						  <div class="progress-bar" role="progressbar" style="width: 2%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+						</div>
+		    			<br>
+		    			<h1>2%</h1>
+		    			<br>
+		    		</div>
+		    		<br>
+		    	</section>
+
 		    	<div class = "row">
 		    		<div class = "col-md-6">
 			    		<div class = "boxes">
